--- a/use-cases/index.html
+++ b/use-cases/index.html
@@ -30,7 +30,7 @@
 <span class="home-icon">⌂</span>Tutelar
 </a>
 <div class="version-number">
-1.0.0-alpha-6
+1.0.0*
 </div>
 </div>
 <div class="nav-toc">
@@ -81,7 +81,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
 <span class="home-icon">⌂</span>Tutelar
 </a>
 <div class="version-number">
-1.0.0-alpha-6
+1.0.0*
 </div>
 </div>
 <div class="nav-toc">
@@ -132,7 +132,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
 <p>Right now we have no implemented 2FA or MFA support, but we are working on it.</p></div>
 <p>TODO  - google/fb/github/ldap  - u/p with registration  - only valid email registration</p>
 <div class="source-github">
-The source code for this page can be found <a href="https://github.com/TeamWanari/tutelar/tree/v1.0.0-alpha-6/docs/src/main/paradox/use-cases/index.md">here</a>.
+The source code for this page can be found <a href="https://github.com/TeamWanari/tutelar/tree/master/docs/src/main/paradox/use-cases/index.md">here</a>.
 </div>
 
 <div class="nav-next">
@@ -202,7 +202,7 @@ The source code for this page can be found <a href="https://github.com/TeamWanar
 <script type="text/javascript" src="../lib/prettify/prettify.js"></script>
 <script type="text/javascript" src="../lib/prettify/lang-scala.js"></script>
 <script type="text/javascript">jQuery(function(){window.prettyPrint && prettyPrint()});</script>
-<script type="text/javascript">jQuery(function(jq){initOldVersionWarnings(jq, '1.0.0-alpha-6', '')});</script>
+<script type="text/javascript">jQuery(function(jq){initOldVersionWarnings(jq, '1.0.0-SNAPSHOT', '')});</script>
 
 
 </html>
