--- a/flows.html
+++ b/flows.html
@@ -30,7 +30,7 @@
 <span class="home-icon">⌂</span>Tutelar
 </a>
 <div class="version-number">
-1.0.0-alpha-6
+1.0.0*
 </div>
 </div>
 <div class="nav-toc">
@@ -81,7 +81,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
 <span class="home-icon">⌂</span>Tutelar
 </a>
 <div class="version-number">
-1.0.0-alpha-6
+1.0.0*
 </div>
 </div>
 <div class="nav-toc">
@@ -132,7 +132,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
 <script src="https://bramp.github.io/js-sequence-diagrams/js/underscore-min.js"></script>
 <script src="https://bramp.github.io/js-sequence-diagrams/js/sequence-diagram-min.js"></script>
 
-<div id="diagram-4a890e89"></div>
+<div id="diagram-0f15a7ca"></div>
 <script>
   var diagram = Diagram.parse(`
   Client->frontend: credentials, userData
@@ -143,7 +143,7 @@ Note right of backend: optional hook \\n your application can log things \\n can
 tutelar-->frontend: success
 frontend-->Client: success
 `);
-  diagram.drawSVG("diagram-4a890e89", {theme: 'simple'});
+  diagram.drawSVG("diagram-0f15a7ca", {theme: 'simple'});
 </script>
 
 <h2><a href="#authentication" name="authentication" class="anchor"><span class="anchor-link"></span></a>Authentication</h2>
@@ -153,7 +153,7 @@ frontend-->Client: success
 <script src="https://bramp.github.io/js-sequence-diagrams/js/underscore-min.js"></script>
 <script src="https://bramp.github.io/js-sequence-diagrams/js/sequence-diagram-min.js"></script>
 
-<div id="diagram-41dcbb67"></div>
+<div id="diagram-6f3a7c61"></div>
 <script>
   var diagram = Diagram.parse(`
   Client->frontend: credentials
@@ -164,7 +164,7 @@ Note right of backend: optional hook \\n your application can log things
 tutelar-->frontend: user token
 frontend-->Client: successful login
 `);
-  diagram.drawSVG("diagram-41dcbb67", {theme: 'simple'});
+  diagram.drawSVG("diagram-6f3a7c61", {theme: 'simple'});
 </script>
 
 <h2><a href="#authorization" name="authorization" class="anchor"><span class="anchor-link"></span></a>Authorization</h2>
@@ -174,7 +174,7 @@ frontend-->Client: successful login
 <script src="https://bramp.github.io/js-sequence-diagrams/js/underscore-min.js"></script>
 <script src="https://bramp.github.io/js-sequence-diagrams/js/sequence-diagram-min.js"></script>
 
-<div id="diagram-4534eac5"></div>
+<div id="diagram-c7baec59"></div>
 <script>
   var diagram = Diagram.parse(`
   Client->frontend: do sth
@@ -183,11 +183,11 @@ Note right of backend: with shared secrets \\n the backend can do authorization
 backend-->frontend: success
 frontend-->Client: success
 `);
-  diagram.drawSVG("diagram-4534eac5", {theme: 'simple'});
+  diagram.drawSVG("diagram-c7baec59", {theme: 'simple'});
 </script>
 
 <div class="source-github">
-The source code for this page can be found <a href="https://github.com/TeamWanari/tutelar/tree/v1.0.0-alpha-6/docs/src/main/paradox/flows.md">here</a>.
+The source code for this page can be found <a href="https://github.com/TeamWanari/tutelar/tree/master/docs/src/main/paradox/flows.md">here</a>.
 </div>
 
 <div class="nav-next">
@@ -272,7 +272,7 @@ The source code for this page can be found <a href="https://github.com/TeamWanar
 <script type="text/javascript" src="lib/prettify/prettify.js"></script>
 <script type="text/javascript" src="lib/prettify/lang-scala.js"></script>
 <script type="text/javascript">jQuery(function(){window.prettyPrint && prettyPrint()});</script>
-<script type="text/javascript">jQuery(function(jq){initOldVersionWarnings(jq, '1.0.0-alpha-6', '')});</script>
+<script type="text/javascript">jQuery(function(jq){initOldVersionWarnings(jq, '1.0.0-SNAPSHOT', '')});</script>
 
 
 </html>
