--- a/install/github.html
+++ b/install/github.html
@@ -30,7 +30,7 @@
 <span class="home-icon">⌂</span>Tutelar
 </a>
 <div class="version-number">
-1.0.0-alpha-10
+1.0.0-alpha-11
 </div>
 </div>
 <div class="nav-toc">
@@ -42,6 +42,7 @@
     <li><a href="../install/github.html" class="active page">Github integration</a></li>
     <li><a href="../install/facebook.html" class="page">Facebook integration</a></li>
     <li><a href="../install/google.html" class="page">Google integration</a></li>
+    <li><a href="../install/microsoft.html" class="page">Microsoft integration</a></li>
     <li><a href="../install/ldap.html" class="page">LDAP integration</a></li>
     <li><a href="../install/basic.html" class="page">Basic user/pass</a></li>
   </ul></li>
@@ -81,7 +82,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
 <span class="home-icon">⌂</span>Tutelar
 </a>
 <div class="version-number">
-1.0.0-alpha-10
+1.0.0-alpha-11
 </div>
 </div>
 <div class="nav-toc">
@@ -93,6 +94,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
     <li><a href="../install/github.html" class="active page">Github integration</a></li>
     <li><a href="../install/facebook.html" class="page">Facebook integration</a></li>
     <li><a href="../install/google.html" class="page">Google integration</a></li>
+    <li><a href="../install/microsoft.html" class="page">Microsoft integration</a></li>
     <li><a href="../install/ldap.html" class="page">LDAP integration</a></li>
     <li><a href="../install/basic.html" class="page">Basic user/pass</a></li>
   </ul></li>
@@ -155,7 +157,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
 <h3><a href="#mobile-implementation" name="mobile-implementation" class="anchor"><span class="anchor-link"></span></a>Mobile implementation</h3><div class="callout warning "><div class="callout-title">Warning</div>
 <p>The correct mobile implementation is not yet designed. (Maybe not even possible/needed.)</p></div>
 <div class="source-github">
-The source code for this page can be found <a href="https://github.com/TeamWanari/tutelar/tree/v1.0.0-alpha-10/docs/src/main/paradox/install/github.md">here</a>.
+The source code for this page can be found <a href="https://github.com/TeamWanari/tutelar/tree/v1.0.0-alpha-11/docs/src/main/paradox/install/github.md">here</a>.
 </div>
 
 <div class="nav-next">
@@ -244,7 +246,7 @@ The source code for this page can be found <a href="https://github.com/TeamWanar
 <script type="text/javascript" src="../lib/prettify/prettify.js"></script>
 <script type="text/javascript" src="../lib/prettify/lang-scala.js"></script>
 <script type="text/javascript">jQuery(function(){window.prettyPrint && prettyPrint()});</script>
-<script type="text/javascript">jQuery(function(jq){initOldVersionWarnings(jq, '1.0.0-alpha-10', '')});</script>
+<script type="text/javascript">jQuery(function(jq){initOldVersionWarnings(jq, '1.0.0-alpha-11', '')});</script>
 
 
 </html>
