--- a/use-cases/index.html
+++ b/use-cases/index.html
@@ -30,7 +30,7 @@
 <span class="home-icon">⌂</span>Tutelar
 </a>
 <div class="version-number">
-1.0.0-alpha-10
+1.0.0-alpha-11
 </div>
 </div>
 <div class="nav-toc">
@@ -42,6 +42,7 @@
     <li><a href="../install/github.html" class="page">Github integration</a></li>
     <li><a href="../install/facebook.html" class="page">Facebook integration</a></li>
     <li><a href="../install/google.html" class="page">Google integration</a></li>
+    <li><a href="../install/microsoft.html" class="page">Microsoft integration</a></li>
     <li><a href="../install/ldap.html" class="page">LDAP integration</a></li>
     <li><a href="../install/basic.html" class="page">Basic user/pass</a></li>
   </ul></li>
@@ -81,7 +82,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
 <span class="home-icon">⌂</span>Tutelar
 </a>
 <div class="version-number">
-1.0.0-alpha-10
+1.0.0-alpha-11
 </div>
 </div>
 <div class="nav-toc">
@@ -93,6 +94,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
     <li><a href="../install/github.html" class="page">Github integration</a></li>
     <li><a href="../install/facebook.html" class="page">Facebook integration</a></li>
     <li><a href="../install/google.html" class="page">Google integration</a></li>
+    <li><a href="../install/microsoft.html" class="page">Microsoft integration</a></li>
     <li><a href="../install/ldap.html" class="page">LDAP integration</a></li>
     <li><a href="../install/basic.html" class="page">Basic user/pass</a></li>
   </ul></li>
@@ -130,9 +132,9 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
 <p>When we designed our APIs and technical flows, we come up with a lot of possible use-cases and tried to support all of them.</p>
 <p>The sub-pages will describe some possible implementation. If you have a concrate problem which is not fit any of the pre-documented ones, please  - try to find out by the others if you can do it or not  - if you can do it, help others and document it (PRs are welcomed)  - if you can&rsquo;t do it, ask a question as an issue on github</p><div class="callout warning "><div class="callout-title">Warning</div>
 <p>Right now we have no implemented 2FA or MFA support, but we are working on it.</p></div>
-<p>TODO  - google/fb/github/ldap  - u/p with registration  - only valid email registration</p>
+<p>TODO  - google/fb/github/microsoft/ldap  - u/p with registration  - only valid email registration</p>
 <div class="source-github">
-The source code for this page can be found <a href="https://github.com/TeamWanari/tutelar/tree/v1.0.0-alpha-10/docs/src/main/paradox/use-cases/index.md">here</a>.
+The source code for this page can be found <a href="https://github.com/TeamWanari/tutelar/tree/v1.0.0-alpha-11/docs/src/main/paradox/use-cases/index.md">here</a>.
 </div>
 
 <div class="nav-next">
@@ -202,7 +204,7 @@ The source code for this page can be found <a href="https://github.com/TeamWanar
 <script type="text/javascript" src="../lib/prettify/prettify.js"></script>
 <script type="text/javascript" src="../lib/prettify/lang-scala.js"></script>
 <script type="text/javascript">jQuery(function(){window.prettyPrint && prettyPrint()});</script>
-<script type="text/javascript">jQuery(function(jq){initOldVersionWarnings(jq, '1.0.0-alpha-10', '')});</script>
+<script type="text/javascript">jQuery(function(jq){initOldVersionWarnings(jq, '1.0.0-alpha-11', '')});</script>
 
 
 </html>
