--- a/flows.html
+++ b/flows.html
@@ -30,7 +30,7 @@
 <span class="home-icon">⌂</span>Tutelar
 </a>
 <div class="version-number">
-1.0.0-alpha-10
+1.0.0-alpha-11
 </div>
 </div>
 <div class="nav-toc">
@@ -42,6 +42,7 @@
     <li><a href="install/github.html" class="page">Github integration</a></li>
     <li><a href="install/facebook.html" class="page">Facebook integration</a></li>
     <li><a href="install/google.html" class="page">Google integration</a></li>
+    <li><a href="install/microsoft.html" class="page">Microsoft integration</a></li>
     <li><a href="install/ldap.html" class="page">LDAP integration</a></li>
     <li><a href="install/basic.html" class="page">Basic user/pass</a></li>
   </ul></li>
@@ -81,7 +82,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
 <span class="home-icon">⌂</span>Tutelar
 </a>
 <div class="version-number">
-1.0.0-alpha-10
+1.0.0-alpha-11
 </div>
 </div>
 <div class="nav-toc">
@@ -93,6 +94,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
     <li><a href="install/github.html" class="page">Github integration</a></li>
     <li><a href="install/facebook.html" class="page">Facebook integration</a></li>
     <li><a href="install/google.html" class="page">Google integration</a></li>
+    <li><a href="install/microsoft.html" class="page">Microsoft integration</a></li>
     <li><a href="install/ldap.html" class="page">LDAP integration</a></li>
     <li><a href="install/basic.html" class="page">Basic user/pass</a></li>
   </ul></li>
@@ -132,7 +134,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
 <script src="https://bramp.github.io/js-sequence-diagrams/js/underscore-min.js"></script>
 <script src="https://bramp.github.io/js-sequence-diagrams/js/sequence-diagram-min.js"></script>
 
-<div id="diagram-e37d832d"></div>
+<div id="diagram-0d5a4f6b"></div>
 <script>
   var diagram = Diagram.parse(`
   Client->frontend: credentials, userData
@@ -143,7 +145,7 @@ Note right of backend: optional hook \\n your application can log things \\n can
 tutelar-->frontend: success
 frontend-->Client: success
 `);
-  diagram.drawSVG("diagram-e37d832d", {theme: 'simple'});
+  diagram.drawSVG("diagram-0d5a4f6b", {theme: 'simple'});
 </script>
 
 <h2><a href="#authentication" name="authentication" class="anchor"><span class="anchor-link"></span></a>Authentication</h2>
@@ -153,7 +155,7 @@ frontend-->Client: success
 <script src="https://bramp.github.io/js-sequence-diagrams/js/underscore-min.js"></script>
 <script src="https://bramp.github.io/js-sequence-diagrams/js/sequence-diagram-min.js"></script>
 
-<div id="diagram-c844032f"></div>
+<div id="diagram-452d4973"></div>
 <script>
   var diagram = Diagram.parse(`
   Client->frontend: credentials
@@ -164,7 +166,7 @@ Note right of backend: optional hook \\n your application can log things
 tutelar-->frontend: user token
 frontend-->Client: successful login
 `);
-  diagram.drawSVG("diagram-c844032f", {theme: 'simple'});
+  diagram.drawSVG("diagram-452d4973", {theme: 'simple'});
 </script>
 
 <h2><a href="#authorization" name="authorization" class="anchor"><span class="anchor-link"></span></a>Authorization</h2>
@@ -174,7 +176,7 @@ frontend-->Client: successful login
 <script src="https://bramp.github.io/js-sequence-diagrams/js/underscore-min.js"></script>
 <script src="https://bramp.github.io/js-sequence-diagrams/js/sequence-diagram-min.js"></script>
 
-<div id="diagram-1a598c15"></div>
+<div id="diagram-2214076f"></div>
 <script>
   var diagram = Diagram.parse(`
   Client->frontend: do sth
@@ -183,11 +185,11 @@ Note right of backend: with shared secrets \\n the backend can do authorization
 backend-->frontend: success
 frontend-->Client: success
 `);
-  diagram.drawSVG("diagram-1a598c15", {theme: 'simple'});
+  diagram.drawSVG("diagram-2214076f", {theme: 'simple'});
 </script>
 
 <div class="source-github">
-The source code for this page can be found <a href="https://github.com/TeamWanari/tutelar/tree/v1.0.0-alpha-10/docs/src/main/paradox/flows.md">here</a>.
+The source code for this page can be found <a href="https://github.com/TeamWanari/tutelar/tree/v1.0.0-alpha-11/docs/src/main/paradox/flows.md">here</a>.
 </div>
 
 <div class="nav-next">
@@ -272,7 +274,7 @@ The source code for this page can be found <a href="https://github.com/TeamWanar
 <script type="text/javascript" src="lib/prettify/prettify.js"></script>
 <script type="text/javascript" src="lib/prettify/lang-scala.js"></script>
 <script type="text/javascript">jQuery(function(){window.prettyPrint && prettyPrint()});</script>
-<script type="text/javascript">jQuery(function(jq){initOldVersionWarnings(jq, '1.0.0-alpha-10', '')});</script>
+<script type="text/javascript">jQuery(function(jq){initOldVersionWarnings(jq, '1.0.0-alpha-11', '')});</script>
 
 
 </html>
