--- a/install/microsoft.html
+++ b/install/microsoft.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 
 <head>
-<title>Authority handling · Tutelar</title>
+<title>Microsoft integration · Tutelar</title>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <meta name="description" content='paradox-docs'/>
@@ -42,14 +42,14 @@
     <li><a href="../install/github.html" class="page">Github integration</a></li>
     <li><a href="../install/facebook.html" class="page">Facebook integration</a></li>
     <li><a href="../install/google.html" class="page">Google integration</a></li>
-    <li><a href="../install/microsoft.html" class="page">Microsoft integration</a></li>
+    <li><a href="../install/microsoft.html" class="active page">Microsoft integration</a></li>
     <li><a href="../install/ldap.html" class="page">LDAP integration</a></li>
     <li><a href="../install/basic.html" class="page">Basic user/pass</a></li>
   </ul></li>
   <li><a href="../use-cases/index.html" class="page">Common use-cases</a>
   <ul>
     <li><a href="../use-cases/just-identity.html" class="page">Just identity check</a></li>
-    <li><a href="../use-cases/authority-handling.html" class="active page">Authority handling</a></li>
+    <li><a href="../use-cases/authority-handling.html" class="page">Authority handling</a></li>
   </ul></li>
 </ul>
 </div>
@@ -94,14 +94,14 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
     <li><a href="../install/github.html" class="page">Github integration</a></li>
     <li><a href="../install/facebook.html" class="page">Facebook integration</a></li>
     <li><a href="../install/google.html" class="page">Google integration</a></li>
-    <li><a href="../install/microsoft.html" class="page">Microsoft integration</a></li>
+    <li><a href="../install/microsoft.html" class="active page">Microsoft integration</a></li>
     <li><a href="../install/ldap.html" class="page">LDAP integration</a></li>
     <li><a href="../install/basic.html" class="page">Basic user/pass</a></li>
   </ul></li>
   <li><a href="../use-cases/index.html" class="page">Common use-cases</a>
   <ul>
     <li><a href="../use-cases/just-identity.html" class="page">Just identity check</a></li>
-    <li><a href="../use-cases/authority-handling.html" class="active page">Authority handling</a></li>
+    <li><a href="../use-cases/authority-handling.html" class="page">Authority handling</a></li>
   </ul></li>
 </ul>
 </div>
@@ -119,8 +119,8 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
 <div class="nav-breadcrumbs">
 <ul>
   <li><a href="../index.html">Tutelar</a></li>
-  <li><a href="../use-cases/index.html">Common use-cases</a></li>
-  <li>Authority handling</li>
+  <li><a href="../install/index.html">Install</a></li>
+  <li>Microsoft integration</li>
 </ul>
 </div>
 </div>
@@ -128,60 +128,42 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
 
 <div class="page-content row">
 <div class="small-12 large-9 column" id="docs">
-<h1><a href="#authority-handling" name="authority-handling" class="anchor"><span class="anchor-link"></span></a>Authority handling</h1>
-<p>You want to keep track if the user can do things on your site or not (without hitting the db).</p>
-<h3><a href="#useable-with-" name="useable-with-" class="anchor"><span class="anchor-link"></span></a>Useable with:</h3>
-<ul>
-  <li>email auth</li>
-  <li>user+pass auth</li>
-  <li>google/fb/github/microsoft</li>
-  <li>ldap</li>
-</ul>
-<h3><a href="#needed-hook-implementations-" name="needed-hook-implementations-" class="anchor"><span class="anchor-link"></span></a>Needed hook implementations:</h3>
-<ul>
-  <li>you can skip the registration hook implementation</li>
-  <li>you need to implement the login hook</li>
-</ul>
-<h3><a href="#registration-process-on-frontend-" name="registration-process-on-frontend-" class="anchor"><span class="anchor-link"></span></a>Registration process on frontend:</h3>
-<ul>
-  <li>See the choosen auth method documentation!</li>
-</ul>
-<h3><a href="#registration-process-on-backend-" name="registration-process-on-backend-" class="anchor"><span class="anchor-link"></span></a>Registration process on backend:</h3>
-<ul>
-  <li>Your registration process only handled by tutelar.</li>
-</ul>
-<h3><a href="#login-process-on-frontend-" name="login-process-on-frontend-" class="anchor"><span class="anchor-link"></span></a>Login process on frontend:</h3>
-<ul>
-  <li>See the choosen auth method documentation!</li>
-</ul>
-<h3><a href="#login-process-on-backend-" name="login-process-on-backend-" class="anchor"><span class="anchor-link"></span></a>Login process on backend:</h3>
-<ul>
-  <li>You need to implement a login callback</li>
-  <li>The callback should return the data you want to get back in the JWT</li>
-  <li>for example if you want to get back the name of the user, you should provide the name</li>
-  <li>if you want to add authorities you can add them as a string or a list of strings or anything suitable for you</li>
-</ul>
-<h3><a href="#after-registration-" name="after-registration-" class="anchor"><span class="anchor-link"></span></a>After registration:</h3>
-<ul>
-  <li>Your backend should check the JWT in the <code>Authorization</code> header
-    <ul>
-      <li>You can ensure that the user is authenticated</li>
-      <li>You will get back the data you provided in the login-hook</li>
-    </ul>
-  </li>
-  <li>You can build custom on-boarding if you add flags to the jwt with the hook
-    <ul>
-      <li>for example: <code>regOk: false</code> We should do the onboarding process</li>
-      <li>if <code>name</code> attribute is missing we should start the onboarding process</li>
-    </ul>
-  </li>
-  <li>If you modify values in your db, which is in the JWT too, you need to request a new JWT from the tutelar service and tell the new token to your frontend</li>
-  <li>Because of the data in the JWT you don&rsquo;t need to query the user from the db in every request</li>
-</ul>
+<h1><a href="#microsoft-integration" name="microsoft-integration" class="anchor"><span class="anchor-link"></span></a>Microsoft integration</h1>
+<p>With this integration you can add <code>Login with Microsoft</code> button to your application. We integrated <a href="https://docs.microsoft.com/en-us/azure/active-directory/develop/v2-oauth2-auth-code-flow">the authorization code flow</a>.</p>
+<h3><a href="#pre-config" name="pre-config" class="anchor"><span class="anchor-link"></span></a>Pre-config</h3>
+<p>Before you start, you must <a href="https://portal.azure.com/#blade/Microsoft_AAD_RegisteredApps/ApplicationsListBlade">register/create your application</a> in the Azure portal. The callback url is the trickiest part. For local tests you can use <code>https://lvh.me:9443/microsoft/callback</code> or <code>https://localtest.me:9443/microsoft/callback</code> (these domains pointed to 127.0.0.1 which will be your local machine). For production, you want to use your own (tutelar) domain (with the <code>/microsoft/callback</code> path).</p><div class="callout note "><div class="callout-title">Note</div>
+<p>Note the https and 9443 port. Microsoft only accepts http and https domains, https is the prefered. It needs a full callback url!</p></div>
+<p>After you created your new OAuth2 app on the Azure portal, you will need the application (client) ID and clientSecret.</p>
+<h3><a href="#configuration" name="configuration" class="anchor"><span class="anchor-link"></span></a>Configuration</h3>
+<p>You should set the <code>oauth2.microsoft.clientId</code>, <code>oauth2.microsoft.clientSecret</code> and <code>oauth2.microsoft.scopes</code> variables. The first two comes from the pre-config step. The last one is <code>user.read</code> by default, but you can use anything from the <a href="https://docs.microsoft.com/en-us/azure/active-directory/develop/v2-permissions-and-consent">official list</a>. (If you use multiple scopes, you need to separate them with <code>,</code> like <code>a,b,c</code>.)</p>
+<p>Also you should set the <code>rootUrl</code> correctly (it is needed for the callbacks). And the <code>callback.success</code> and <code>callback.failure</code> to handle redirects correctly.</p>
+<h4><a href="#example" name="example" class="anchor"><span class="anchor-link"></span></a>Example</h4>
+<p>Your frontend is on <code>https://example.com</code>, your tutelar service is on <code>https://auth.example.com</code>.</p>
+<p>The rootUrl should be <code>https://auth.example.com</code>. The success url is something like <code>https://example.com/authentication?token=&lt;&lt;TOKEN&gt;&gt;</code> and the failure like <code>https://example.com/authenticationError/&lt;&lt;ERROR&gt;&gt;</code> </p>
+<h3><a href="#hooks-data" name="hooks-data" class="anchor"><span class="anchor-link"></span></a>Hooks data</h3>
+<p>The hooks will contain the user <a href="https://docs.microsoft.com/en-us/graph/api/user-get?view=graph-rest-1.0&tabs=http">profile</a> from <code>https://graph.microsoft.com/v1.0/me</code>.</p>
+<h3><a href="#getting-more-data-from-the-api" name="getting-more-data-from-the-api" class="anchor"><span class="anchor-link"></span></a>Getting more data from the API</h3><div class="callout warning "><div class="callout-title">Warning</div>
+<p>Currently there is no possible way to get back the auth token from tutelar. In the near future probably there will be an api for it.</p></div>
+<h3><a href="#frontend-for-registration" name="frontend-for-registration" class="anchor"><span class="anchor-link"></span></a>Frontend for registration</h3>
+<p>Not needed to differentiate your registration and login frontend.</p>
+<h3><a href="#frontend-for-login" name="frontend-for-login" class="anchor"><span class="anchor-link"></span></a>Frontend for login</h3>
+<p>The easiest way to create a proper button is using an <a href="https://lipis.github.io/bootstrap-social/">already created lib</a> for it.</p>
+<p>If you want to go with minimal HTML:</p>
+<pre class="prettyprint"><code class="language-html">&lt;a id=&quot;microsoft-button&quot; class=&quot;btn btn-block btn-social btn-microsoft&quot;&gt;
+  &lt;i class=&quot;fa fa-microsoft&quot;&gt;&lt;/i&gt; Sign in with Microsoft
+&lt;/a&gt;
+</code></pre>
+<p>You should add a <code>href=&quot;https://auth.example.com/microsoft/login&quot;</code> to the <code>&lt;a&gt;</code> tag too.</p>
+<p>Or if you want to go with the <a href="https://docs.microsoft.com/en-us/azure/active-directory/develop/howto-add-branding-in-azure-ad-apps">official</a> just use that.</p>
+<h3><a href="#mobile-implementation" name="mobile-implementation" class="anchor"><span class="anchor-link"></span></a>Mobile implementation</h3><div class="callout warning "><div class="callout-title">Warning</div>
+<p>The correct mobile implementation is not yet designed.</p></div>
 <div class="source-github">
-The source code for this page can be found <a href="https://github.com/TeamWanari/tutelar/tree/v1.0.0-alpha-11/docs/src/main/paradox/use-cases/authority-handling.md">here</a>.
+The source code for this page can be found <a href="https://github.com/TeamWanari/tutelar/tree/v1.0.0-alpha-11/docs/src/main/paradox/install/microsoft.md">here</a>.
 </div>
 
+<div class="nav-next">
+<p><strong>Next:</strong> <a href="../install/ldap.html">LDAP integration</a></p>
+</div>
 </div>
 <div class="large-3 show-for-large column" data-sticky-container>
 <nav class="sidebar sticky" data-sticky data-anchor="docs" data-sticky-on="large">
@@ -189,15 +171,15 @@ The source code for this page can be found <a href="https://github.com/TeamWanar
 <div class="nav-title">On this page:</div>
 <div class="nav-toc">
 <ul>
-  <li><a href="../use-cases/authority-handling.html#authority-handling" class="header">Authority handling</a>
+  <li><a href="../install/microsoft.html#microsoft-integration" class="header">Microsoft integration</a>
   <ul>
-    <li><a href="../use-cases/authority-handling.html#useable-with-" class="header">Useable with:</a></li>
-    <li><a href="../use-cases/authority-handling.html#needed-hook-implementations-" class="header">Needed hook implementations:</a></li>
-    <li><a href="../use-cases/authority-handling.html#registration-process-on-frontend-" class="header">Registration process on frontend:</a></li>
-    <li><a href="../use-cases/authority-handling.html#registration-process-on-backend-" class="header">Registration process on backend:</a></li>
-    <li><a href="../use-cases/authority-handling.html#login-process-on-frontend-" class="header">Login process on frontend:</a></li>
-    <li><a href="../use-cases/authority-handling.html#login-process-on-backend-" class="header">Login process on backend:</a></li>
-    <li><a href="../use-cases/authority-handling.html#after-registration-" class="header">After registration:</a></li>
+    <li><a href="../install/microsoft.html#pre-config" class="header">Pre-config</a></li>
+    <li><a href="../install/microsoft.html#configuration" class="header">Configuration</a></li>
+    <li><a href="../install/microsoft.html#hooks-data" class="header">Hooks data</a></li>
+    <li><a href="../install/microsoft.html#getting-more-data-from-the-api" class="header">Getting more data from the API</a></li>
+    <li><a href="../install/microsoft.html#frontend-for-registration" class="header">Frontend for registration</a></li>
+    <li><a href="../install/microsoft.html#frontend-for-login" class="header">Frontend for login</a></li>
+    <li><a href="../install/microsoft.html#mobile-implementation" class="header">Mobile implementation</a></li>
   </ul></li>
 </ul>
 </div>
