--- a/use-cases/just-identity.html
+++ b/use-cases/just-identity.html
@@ -30,7 +30,7 @@
 <span class="home-icon">⌂</span>Tutelar
 </a>
 <div class="version-number">
-1.0.0-alpha-10
+1.0.0-alpha-11
 </div>
 </div>
 <div class="nav-toc">
@@ -42,6 +42,7 @@
     <li><a href="../install/github.html" class="page">Github integration</a></li>
     <li><a href="../install/facebook.html" class="page">Facebook integration</a></li>
     <li><a href="../install/google.html" class="page">Google integration</a></li>
+    <li><a href="../install/microsoft.html" class="page">Microsoft integration</a></li>
     <li><a href="../install/ldap.html" class="page">LDAP integration</a></li>
     <li><a href="../install/basic.html" class="page">Basic user/pass</a></li>
   </ul></li>
@@ -81,7 +82,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
 <span class="home-icon">⌂</span>Tutelar
 </a>
 <div class="version-number">
-1.0.0-alpha-10
+1.0.0-alpha-11
 </div>
 </div>
 <div class="nav-toc">
@@ -93,6 +94,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
     <li><a href="../install/github.html" class="page">Github integration</a></li>
     <li><a href="../install/facebook.html" class="page">Facebook integration</a></li>
     <li><a href="../install/google.html" class="page">Google integration</a></li>
+    <li><a href="../install/microsoft.html" class="page">Microsoft integration</a></li>
     <li><a href="../install/ldap.html" class="page">LDAP integration</a></li>
     <li><a href="../install/basic.html" class="page">Basic user/pass</a></li>
   </ul></li>
@@ -132,7 +134,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
 <ul>
   <li>email auth</li>
   <li>user+pass auth</li>
-  <li>google/fb/github</li>
+  <li>google/fb/github/microsoft</li>
   <li>ldap</li>
 </ul>
 <h3><a href="#needed-hook-implementations-" name="needed-hook-implementations-" class="anchor"><span class="anchor-link"></span></a>Needed hook implementations:</h3>
@@ -175,7 +177,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
   </li>
 </ul>
 <div class="source-github">
-The source code for this page can be found <a href="https://github.com/TeamWanari/tutelar/tree/v1.0.0-alpha-10/docs/src/main/paradox/use-cases/just-identity.md">here</a>.
+The source code for this page can be found <a href="https://github.com/TeamWanari/tutelar/tree/v1.0.0-alpha-11/docs/src/main/paradox/use-cases/just-identity.md">here</a>.
 </div>
 
 <div class="nav-next">
@@ -264,7 +266,7 @@ The source code for this page can be found <a href="https://github.com/TeamWanar
 <script type="text/javascript" src="../lib/prettify/prettify.js"></script>
 <script type="text/javascript" src="../lib/prettify/lang-scala.js"></script>
 <script type="text/javascript">jQuery(function(){window.prettyPrint && prettyPrint()});</script>
-<script type="text/javascript">jQuery(function(jq){initOldVersionWarnings(jq, '1.0.0-alpha-10', '')});</script>
+<script type="text/javascript">jQuery(function(jq){initOldVersionWarnings(jq, '1.0.0-alpha-11', '')});</script>
 
 
 </html>
